# pgvector-semantic-search-demo

./: .gitignore  CITATION.cff  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
docs/: design.md  rag_next_steps.md
scripts/: 00_check_connection.py  05_reset_db.sh.example  10_init_db.py  20_ingest_demo.py  30_search_demo.py
sql/: 020_schema.sql  030_seed.sql  040_indexes.sql  050_queries.sql
