[project]
name = "pgvector-semantic-search-demo"
version = "0.1.0"
description = "End-to-end demo of semantic search using pgvector and Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pylint>=3.0",
]

[tool.pylint.main]
py-version = "3.10"
jobs = 0
fail-under = 7.5
ignore-paths = [
  "^docs/",
  "^images/",
  "^sql/",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "invalid-name",
  "too-few-public-methods",
  # Uncomment if imports are noisy in CI/local due to optional deps:
  # "import-error",
]

[tool.pylint.reports]
score = true
